# scduck

./: .gitignore  README.md  SYNC_LOGIC.md  pyproject.toml  scd_table.py  security_master_db.py
.github/workflows/: publish.yml  test.yml
scduck/: __init__.py  table.py
tests/: __init__.py  conftest.py  test_basic.py  test_input_types.py  test_sync_cases.py
