[project]
name = "scduck"
version = "0.1.0"
description = "SCD Type 2 tables with DuckDB. Track historical changes to slowly-changing data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Larry Chen", email = "lchen@wolferesearch.com"}
]
keywords = ["scd", "duckdb", "temporal", "history", "data-warehouse", "slowly-changing-dimension"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
polars = ["polars>=0.19.0"]
all = ["pandas>=2.0.0", "polars>=0.19.0"]
dev = ["pytest>=7.0.0", "pandas>=2.0.0", "polars>=0.19.0"]

[project.urls]
Homepage = "https://github.com/wolferesearch/scduck"
Repository = "https://github.com/wolferesearch/scduck"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scduck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
